Before moving stylesheet

--- a/templates/book_detail.html
+++ b/templates/book_detail.html
@@ -79,6 +79,8 @@
     .character-list td:first-child {
         font-weight: bold;
     }
+
+
     </style>
 </head>
 <body>
@@ -86,7 +88,7 @@
     <!-- Título do Livro -->
     <h1>{{ book.title }}</h1>
     <div style="margin-bottom: 20px;">
-    <a href="{{ url_for('book_details') }}" style="text-decoration: none; color: white; background-color: #4CAF50; padding: 10px 15px; border-radius: 5px; font-weight: bold;">⬅ Voltar</a>
+    <a href="{{ url_for('book_gallery') }}" style="text-decoration: none; color: white; background-color: #4CAF50; padding: 10px 15px; border-radius: 5px; font-weight: bold;">⬅ Voltar</a>
 </div>
 
 
