--- a/templates/index.html
+++ b/templates/index.html
@@ -389,8 +389,9 @@
         <div class="buttons">
             <a href="/">RANDOM QUOTES</a>
             <a href="/all">ALL QUOTES</a>
-            <button onclick="toggleView()">BOOKS</button>
-            <a href="/details">DETAILS</a>
+            <a href="/book_gallery">BOOKS</a>
+            <a href="/characters">CHARACTERS</a>
+           <!-- <a href="/details">DETAILS</a> -->
         </div>
 
          <!-- Filtros por Tipo -->
